--- a/Examples/Example-iOS/Base.lproj/Main.storyboard
+++ b/Examples/Example-iOS/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="SPA-O5-llY">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Hallo Backtrace!" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uk6-aK-qdW">
-                                <rect key="frame" x="10" y="10" width="355" height="33"/>
+                                <rect key="frame" x="10" y="54" width="355" height="33"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="33" id="HD0-qq-4KM"/>
@@ -27,7 +27,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="8lh-6a-7qJ">
-                                <rect key="frame" x="16" y="51" width="343" height="596"/>
+                                <rect key="frame" x="16" y="95" width="343" height="552"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CaseCell" id="hgy-mD-Ybb" customClass="SimulatorCaseCell" customModule="Example_iOS" customModuleProvider="target">
@@ -77,6 +77,7 @@
                             <constraint firstItem="8lh-6a-7qJ" firstAttribute="top" secondItem="uk6-aK-qdW" secondAttribute="bottom" constant="8" symbolic="YES" id="yV3-e3-6Oz"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="PF4-9q-Zby"/>
                     <connections>
                         <outlet property="tableView" destination="8lh-6a-7qJ" id="5wp-Hr-6St"/>
                     </connections>
@@ -84,6 +85,72 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="56.799999999999997" y="26.53673163418291"/>
+        </scene>
+        <!--View Controller PnP-->
+        <scene sceneID="VNd-hp-tcQ">
+            <objects>
+                <viewController storyboardIdentifier="ViewControllerPnP" id="vhX-Xe-G5j" customClass="ViewControllerPnP" customModule="Example_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Hst-Dh-c4o">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Hallo Backtrace!" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tUQ-0D-as1">
+                                <rect key="frame" x="10" y="10" width="355" height="33"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="33" id="uUe-cr-NED"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fsa-he-P3i">
+                                <rect key="frame" x="126.5" y="302.5" width="122.5" height="62"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="122.5" id="QAb-vN-mQi"/>
+                                    <constraint firstAttribute="height" constant="62" id="mWK-ur-QgY"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="gray" title="PLAY">
+                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="40"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="onBtnPlay" destination="vhX-Xe-G5j" eventType="touchUpInside" id="2Fp-Vf-Ic7"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="ZPe-qO-go9"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="tUQ-0D-as1" firstAttribute="top" secondItem="ZPe-qO-go9" secondAttribute="top" constant="10" id="2ov-Lr-nBD"/>
+                            <constraint firstItem="ZPe-qO-go9" firstAttribute="trailing" secondItem="tUQ-0D-as1" secondAttribute="trailing" constant="10" id="DnM-0k-ZnX"/>
+                            <constraint firstItem="fsa-he-P3i" firstAttribute="centerY" secondItem="Hst-Dh-c4o" secondAttribute="centerY" id="FLI-eS-1jJ"/>
+                            <constraint firstItem="ZPe-qO-go9" firstAttribute="trailing" secondItem="tUQ-0D-as1" secondAttribute="trailing" constant="10" id="Y6n-4Q-Dqd"/>
+                            <constraint firstItem="fsa-he-P3i" firstAttribute="centerX" secondItem="Hst-Dh-c4o" secondAttribute="centerX" id="dWG-46-WQy"/>
+                            <constraint firstItem="tUQ-0D-as1" firstAttribute="leading" secondItem="ZPe-qO-go9" secondAttribute="leading" constant="10" id="gz7-Or-zC9"/>
+                            <constraint firstItem="tUQ-0D-as1" firstAttribute="top" secondItem="ZPe-qO-go9" secondAttribute="top" constant="10" id="jIN-cQ-G8U"/>
+                            <constraint firstItem="tUQ-0D-as1" firstAttribute="leading" secondItem="ZPe-qO-go9" secondAttribute="leading" constant="10" id="orB-Uc-0KI"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Mgi-Fk-aQg" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="874" y="27"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="CzN-yE-Qhm">
+            <objects>
+                <navigationController id="SPA-O5-llY" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="L7E-ks-P2k">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="W2Z-eM-NCq"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hW6-Ss-uWO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-817" y="27"/>
         </scene>
     </scenes>
     <resources>
